[gd_scene load_steps=5 format=3 uid="uid://c8qg23td4t2ek"]

[ext_resource type="Script" path="res://ui/lobby_ui.gd" id="1_q4o73"]
[ext_resource type="Texture2D" uid="uid://dtgrl7raq2nrg" path="res://assets/images/dagger.png" id="2_2s36o"]
[ext_resource type="Script" path="res://ui/lobby.gd" id="3_408or"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsrgf"]
bg_color = Color(0.6, 0.6, 0.6, 0.501961)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="LobbyUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q4o73")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 160
text = "Lobby"
horizontal_alignment = 1

[node name="JoinCodeHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinCodeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/JoinCodeHBox"]
layout_mode = 2
text = "Join code:"

[node name="JoinCode" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/JoinCodeHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
scroll_fit_content_height = true

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wsrgf")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Player1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player1"

[node name="Player2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player2"

[node name="Player3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player3"

[node name="Player4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player4"

[node name="Player5" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player5"

[node name="Player6" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player6"

[node name="Player7" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player7"

[node name="Player8" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player8"

[node name="Player9" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player9"

[node name="Player10" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player10"

[node name="Player11" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player11"

[node name="Player12" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/MarginContainer/PlayerList"]
layout_mode = 2
text = "Player12"

[node name="PlayerCountHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="PlayerCount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerCountHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="PlayerCountMax" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerCountHBox"]
layout_mode = 2
text = "/ 12"

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Get stabbin!"
icon = ExtResource("2_2s36o")
icon_alignment = 1
expand_icon = true

[node name="Lobby" type="Node" parent="."]
script = ExtResource("3_408or")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="player_connected" from="Lobby" to="." method="_on_lobby_player_connected"]
